--- a/.github/workflows/ci_linter.yml
+++ b/.github/workflows/ci_linter.yml
@@ -1,6 +1,6 @@
-name: Python package
+name: Python Application
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -16,6 +16,12 @@ jobs:
         python-version: '3.x'
         # Optional - x64 or x86 architecture, defaults to x64
         architecture: 'x64'
+    - name: Install dependencies
+      run: |
+        pip install -r requirements-dev.txt
+    - name: Lint with flake8
+      run: |
+        run flake8 .
     # You can test your matrix by printing the current Python version
     - name: Display Python version
       run: python -c "import sys; print(sys.version)"
